# wordlebot

./: .gitmodules  CMakeLists.txt
.github/workflows/: cmake.yml
data/: wordle_allowed.txt
game/: wordlegame.cpp
src/: gameinfo.cpp  gameinfo.h  wordlebot.cpp
utils/: FixedString.h  utils.h
